--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta http-equiv="refresh" content="0; url=http://megscholl.github.io/public/index.html" />
+    <meta http-equiv="refresh" content="0; url=http://megscholl.github.io/build/index.html" />
     <title>Document</title>
 </head>
-<body>
-    
+
 </body>
 </html>
